# curriculum

./: .coverage  AGENTS.md  DOCUMENTATION_VERIFICATION_REPORT.md  LICENSE  README.md  SETUP.md  TEST_SUITE_SUMMARY.md  pyproject.toml  pytest.ini
.cursorrules/: 00-overview.md  01-uv-environment.md  02-folder-structure.md  03-testing-real-only.md  04-logging-unified.md  05-code-standards.md  06-error-handling.md  07-configuration.md  08-content-generation.md  09-safe-to-fail.md  10-agentic-generation.md  11-documentation-standards.md  README.md
config/: AGENTS.md  README.md  course_config.yaml  llm_config.yaml  output_config.yaml
docs/: AGENTS.md  API.md  ARCHITECTURE.md  CONFIGURATION.md  CONTRIBUTING.md  DATA_FLOW.md  DEPLOYMENT.md  ERROR_HANDLING.md  EXTENSION.md  FORMATS.md  JSON_OUTLINE.md  LOGGING.md  MODULE_ORGANIZATION.md  PERFORMANCE.md  PIPELINE_GUIDE.md  README.md  SECURITY.md  TESTING_COVERAGE.md  TROUBLESHOOTING.md  VALIDATION.md
scripts/: 01_setup_environment.py  02_run_tests.py  03_generate_outline.py  04_generate_primary.py  05_generate_secondary.py  06_website.py  AGENTS.md  README.md  __init__.py  run_pipeline.py
src/: AGENTS.md  README.md  __init__.py
tests/: AGENTS.md  EXECUTION_GUIDE.md  README.md  __init__.py  conftest.py  test_batch_processor.py  test_cleanup.py  test_config_loader.py  test_content_analysis.py  test_content_generators.py  test_course_selection_edge_cases.py  test_error_collector.py  test_error_collector_edge_cases.py  test_format_generators_comprehensive.py  test_helpers_extended.py  test_json_extraction.py  test_parser.py  (+21 more)
(+815 files in other folders)
